maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:20: error: forward reference extends over definition of variable sA
        sA+=1
        ^