maze.pledge.PledgeMaze.scala.code
override def run() {
  
  def testgauche():Boolean = {
    gauche()
    if (estFaceMur()) {droite();return true}
    droite()
    return false
  }
  
  def keepHandOnSideWall():Boolean = {
    var t=false

    if (!estFaceMur && testgauche) {
      avance()
      t=true
      if (!testgauche()) {
        gauche();
        avance();
        sA+=1
        if (!testgauche()) {
          gauche();
          avance();
          sA+=1
          
        }}}
    return t
                           
  }
  
  droite()
  var sA:Int=(-1)
  while (!estSurBiscuit) {
    if (getDirection==Direction.NORTH && !estFaceMur() && sA!=0) {
      avance()
    } else {
    	if (!keepHandOnSideWall()) {droite;sA-=1}
    }
  }
  prendBiscuit()
  
  
  
}